Almost done, need to change the rules of the game

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br>
         <h2>Your guesses so far: <div id="guesses" style="display: inline"></div></h2>
 
-        <script src="script.js"></script>
+        <script src="./assets/javascript/game.js"></script>
 
     </body>
 
